<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/menuPozZapiszDane"
          android:title="@string/menu_action_save"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menuPozSMS"
        android:title="@string/menu_action_sms"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/menuPozHistoria"
          android:title="@string/menu_action_logs"
          android:orderInCategory="110"
          app:showAsAction="never"/>

    <item android:id="@+id/menuPozWyczyscPola"
          android:title="@string/menu_action_clear"
          android:orderInCategory="120"
          app:showAsAction="never"/>
</menu>